<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  tools:context=".view.CepActivity">

  <include
    android:id="@+id/mpaLoading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    layout="@layout/mpa_loading"
    android:visibility="gone
"/>

  <androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mpa_green"
    app:title="@string/mpa_title_findCEP"
    app:titleTextColor="@color/mpa_white" />

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/mpa_margin_16dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mpa_margin_16dp"
        android:layout_marginHorizontal="@dimen/mpa_margin_16dp"
        android:text="@string/mpa_title"
        android:textColor="@color/mpa_grey_black"
        android:textSize="@dimen/mpa_dimen_18sp"
        android:textStyle="bold"
        android:typeface="sans" />

      <EditText
        android:id="@+id/mpaCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/mpa_margin_16dp"
        android:layout_marginHorizontal="@dimen/mpa_margin_16dp"
        android:hint="@string/mpa_cep"
        android:inputType="number"
        android:maxLength="9"
        android:minHeight="48dp"
        android:textColor="@color/mpa_black" />

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/mpa_margin_18dp"
        android:layout_marginBottom="@dimen/mpa_margin_18dp"
        android:textAlignment="center"
        android:text="@string/mpa_cep_info" />

    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/mpaBtConsulte"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/mpa_margin_16dp"
    android:background="@drawable/mpa_bg_button"
    android:text="@string/mpa_consult"
    android:textColor="@color/mpa_white"
    android:textAllCaps="false" />

  <TextView
    android:id="@+id/mpaTitleResult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/mpa_margin_16dp"
    android:layout_marginTop="@dimen/mpa_margin_16dp"
    android:text="@string/mpa_result"
    android:textColor="@color/mpa_grey_black"
    android:textSize="@dimen/mpa_dimen_18sp"
    android:textStyle="bold"
    android:visibility="gone"/>

  <TextView
    android:id="@+id/mpaDescriptionResult"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/mpa_margin_16dp"
    android:layout_marginTop="@dimen/mpa_margin_16dp"
    android:textColor="@color/mpa_grey_black"
    android:textSize="@dimen/mpa_dimen_18sp"
    android:visibility="gone"/>

</LinearLayout>